--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Grayscale - Start Bootstrap Theme</title>
+    <title>TNOTM - John Oliphant</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -19,6 +19,7 @@
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href="css/devicons.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
@@ -75,7 +76,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">John Oliphant</h1>
-                        <p class="intro-text">"If you don't know, the thing to do is not to get scared, but to learn."</p>
+                        <p class="intro-text">"If you don't know, the thing to do is not to get scared, but to learn."<a href="http://www.goodreads.com/quotes/36026-if-you-don-t-know-the-thing-to-do-is-not">*</a></p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -90,7 +91,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About</h2>
-                <p>TNOTM is a passion of mine.  I launched the site in 2000 as a link portal for myself, and some friends.  A few years later, after not updating it much, I gave it a little spruce up and wow was I suprised.  Turned out popularity had grown and the changes were noticed.  Don't get me wrong, I wasn't some powerhouse of a portal, but knowing that a few folks used me as a homepage was kinda cool.</p>
+                <p>TNOTM is a passion of mine.  I launched the site in <a href="http://longnow.org/essays/millennium-clock/">0</a>2000 as a link portal for myself, and some friends.  A few years later, after not updating it much, I gave it a little spruce up and wow was I suprised.  Turned out popularity had grown and the changes were noticed.  Don't get me wrong, I wasn't some powerhouse of a portal, but knowing that a few folks used me as a homepage was kinda cool.</p>
 			    <p> Good thing about running the site was that I learned <em>everyone can be hacked</em> and I mean <strong><em>everyone</em></strong>.  The hacked version, seen here on the Internet Archive's<a href="https://web.archive.org/web/20050204032513/http://tnotm.com/"> Wayback Machine</a>, shows how this was accomplished, because you can see a PHP Nuke link at the bottom.  Yes.  Back in the day I ran totally unpatched CMS as my fun portal site.  Later on, after dropping the domain for a time, I went back to the static site...  <a href="https://web.archive.org/web/20110228224855/http://www.oliphantfamily.net/tnotm/">of portal links.</a></p>
                 <p>Now here I am again, owning tnotm.com.  Why?  I think the answer is, because in this case, I can go home again.  Not only was tnotm a site name, but over the years it has followed me as my internet moniker.   Whether on Github or Twitter, tnotm is usually me.</p>
 				<p>
@@ -106,9 +107,11 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Resume / CV</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="https://drive.google.com/file/d/0B7JQf1_BhFcrYm1reG5ZMlhnSjQ/view?usp=sharing" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o fa-fw"></i> <span class="network-name">PDF</span></a>
-					<a href="https://docs.google.com/document/d/1PEpGHM7hRcRnlucHMSscy9nlMz8hNBdX5RQp7A3kWv8/edit?usp=sharing" class="btn btn-default btn-lg"><i class="fa fa-google fa-fw"></i> <span class="network-name">Google Doc</span></a>
+					<ul class="list-inline banner-social-buttons">
+                    	<li><a href="https://drive.google.com/file/d/0B7JQf1_BhFcrYm1reG5ZMlhnSjQ/view?usp=sharing" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o fa-fw"></i> <span class="network-name">PDF</span></a></li>
+						<li><a href="https://docs.google.com/document/d/1PEpGHM7hRcRnlucHMSscy9nlMz8hNBdX5RQp7A3kWv8/edit?usp=sharing" class="btn btn-default btn-lg"><i class="fa fa-google fa-fw"></i> <span class="network-name">Google Doc</span></a></li>
+					<li><a href="https://docs.google.com/document/d/1PEpGHM7hRcRnlucHMSscy9nlMz8hNBdX5RQp7A3kWv8/edit?usp=sharing" class="btn btn-default btn-lg"><i class="fa fa-file-code-o fa-fw"></i> <span class="network-name">Markdown</span></a></li>
+					</ul>
                 </div>
             </div>
         </div>
@@ -118,19 +121,22 @@
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
+                <h2>Contact</h2>
+				<p>With the internet most folks are no longer anonymous.  Instead of hiding behind a <a href="http://whois.icann.org/en/lookup?name=www.tnotm.com">'thin wall of security through obscurity'</a>...</p>
+				<p>
+			     Please feel free to reach out to me at anytime, about anything.  I may or may not respond depending on time and availablity.
+				</p>
+                <p><a href="mailto:john.thomas.oliphant@gmail.com">john.thomas.oliphant@gmail.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                        <a href="https://twitter.com/tnotm" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                     </li>
                     <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                        <a href="https://github.com/tnotm" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                     </li>
                     <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
+                        <a href="https://plus.google.com/+JohnOliphant/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
                     </li>
                 </ul>
             </div>
