--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 					<ul class="list-inline banner-social-buttons">
                     	<li><a href="https://drive.google.com/file/d/0B7JQf1_BhFcrYm1reG5ZMlhnSjQ/view?usp=sharing" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o fa-fw"></i> <span class="network-name">PDF</span></a></li>
 						<li><a href="https://docs.google.com/document/d/1PEpGHM7hRcRnlucHMSscy9nlMz8hNBdX5RQp7A3kWv8/edit?usp=sharing" class="btn btn-default btn-lg"><i class="fa fa-google fa-fw"></i> <span class="network-name">Google Doc</span></a></li>
-					<li><a href="https://docs.google.com/document/d/1PEpGHM7hRcRnlucHMSscy9nlMz8hNBdX5RQp7A3kWv8/edit?usp=sharing" class="btn btn-default btn-lg"><i class="fa fa-file-code-o fa-fw"></i> <span class="network-name">Markdown</span></a></li>
+					<li><a href="https://drive.google.com/file/d/0B7JQf1_BhFcrZGRkVUxaNEZtWVU/view?usp=sharing" class="btn btn-default btn-lg"><i class="fa fa-file-code-o fa-fw"></i> <span class="network-name">Markdown</span></a></li>
 					</ul>
                 </div>
             </div>
